Fix script tag mistake

--- a/yeet/index.html
+++ b/yeet/index.html
@@ -12,6 +12,6 @@
     <h1>Yeet</h1>
 </body>
 
-<script type="javascript" src="./script.js"></script>
+<script type="text/javascript" src="./script.js"></script>
 
 </html>
