--- a/yeet/index.html
+++ b/yeet/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta property="og:type" content="profile" />
+	<meta property="og:image" content="https://pics.cheesits456.dev/yeet/yeet.jpeg" />
+	<meta property="og:title" content="Yeet yeet yeet yeet" />
+	<meta property="og:url" content="https://cheesits456.dev/boredom/yeet" />
+	<meta property="og:description" content="Yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet yeet" />
+	<meta name="theme-color" content="#e722e7" />
     <title>Bazinga</title>
     <link rel="icon" href="https://raw.githubusercontent.com/cheesits456/cheesits456/master/avatar_64.png" />
     <link rel="stylesheet" href="./style.css" />
